[build-system]
requires = [
  "setuptools>=40.6.0",
  "wheel",
  "setuptools_scm",
  "oldest-supported-numpy",
  "pybind11>=2.4",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pytest.ini_options]
addopts = "-v"
